--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
-body {
+*, *::after, *::before{
+  box-sizing: border-box;
+}
+
+html, body{
   margin: 0;
+  padding: 0;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  line-height: 1.6;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+article{
+  border-top: 1px solid black;
+  padding: 0.5rem;
+  text-align: initial;
+}
+
+footer{
+  border-top: 1px solid black;  
+  padding: 0.5rem;
 }
